--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
           <div class="container">
             <div class="wrapper">
               <div class="caption header" data-animate="slideAppearRightToLeft" data-delay="0" data-length="300">
-                <h2>Neat theme</h2>
+                <h2>EECS</h2>
                 <p class="sub text-left" data-animate="slideAppearLeftToRight" data-delay="300" data-length="300"><span>Clean and modern design</span></p>
                 <p class="sub text-left" data-animate="slideAppearLeftToRight" data-delay="500" data-length="300"><span>Lightweight</span></p>
                 <p class="sub text-left" data-animate="slideAppearLeftToRight" data-delay="700" data-length="300"><span>Standards compliant</span></p>
@@ -54,6 +54,7 @@
     </ol>
   </div>
 </div>
+
 <!-- Responsive slider - END -->
 <script type="text/javascript">
   $(document).ready(function() {
