--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -15,8 +15,8 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li class="active"><%= link_to 'Home', root_path %></li>
-          <li><%= link_to 'About us', about_path %></li>
+          <li class="<%= 'active' if controller.action_name == 'home' %>"><%= link_to 'Home', root_path %></li>
+          <li class="<%= 'active' if controller.action_name == 'about' %>"><%= link_to 'About us', about_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <b class="caret"></b></a>
             <ul class="dropdown-menu">
@@ -35,7 +35,7 @@
               <li><a href="">Typography</a></li>
             </ul>
           </li>
-          <li><a href="contact.html">Contact</a></li>
+          <li class="<%= 'active' if controller.action_name == 'contact' %>"><a href="contact.html">Contact</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="fa fa-search"></span></a>
             <ul class="dropdown-menu">
