Move bg parallax to override and make it asset pipeline aware

--- a/app/assets/stylesheets/neat-blue-overrides.scss
+++ b/app/assets/stylesheets/neat-blue-overrides.scss
@@ -13,3 +13,7 @@
 .nav-footer {
   margin-bottom: 20px;
 }
+
+.responsive-slider-parallax .slides-container {
+  background-image: url(asset-path("eecs-parallax.png"));
+}
