--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -83,3 +83,152 @@
     });
   });
 </script>
+
+
+<!-- Info thumbnails - START -->
+<section class="background-white color-black">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-4 col-md-4">
+        <a class="info-thumbnail-link" href="/">
+          <div class="thumbnail info-thumbnail">
+            <div class="caption">
+              <h3><span class="fa fa-flag color-lead"></span> Font awesome</h3>
+              <p class="description">NEAT template supports as much modern technologies and trends as possible. One of them is font awesome icons. This great set of fonts is available anywhere you want on your page. Some of NEAT ui elements are also using font awesome like this info thumbnails.</p>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-sm-4 col-md-4">
+        <a class="info-thumbnail-link" href="/">
+        <div class="thumbnail info-thumbnail">
+          <div class="caption">
+            <h3><span class="fa fa-group color-lead"></span> Color classes</h3>
+            <p class="description">You can use template elements as you have them in the examples but if you feel creative you can compose our own color combinations in ui elements. You have beautiful set of flat ui colors to work with just use <i>color-{color-name}</i> or <i>background-{color-name}</i> to change text color or background of any element on the page.</p>
+          </div>
+        </div>
+        </a>
+      </div>
+      <div class="col-sm-4 col-md-4">
+        <a class="info-thumbnail-link" href="/">
+          <div class="thumbnail info-thumbnail">
+            <div class="caption">
+              <h3><span class="fa fa-gavel color-lead"></span> Some more info</h3>
+              <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin venenatis velit nibh, sit amet commodo sapien tristique at. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras bibendum erat at ultricies rhoncus.</p>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Info thumbnails - END -->
+
+
+<!-- News - START -->
+<section class="background-white color-black">
+  <div class="container">
+    <h1><span>Upcoming Events</span></h1>
+    <div class="news">
+      <a class="news-link" href="">
+        <div class="media clearfix background-clouds color-black">
+          <div class="pull-left">
+            <img class="media-object" src="/themes/neat/img/img1.jpg" alt="...">
+          </div>
+          <div class="media-body">
+            <h3 class="media-heading">Awesome news</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin venenatis velit nibh, sit amet commodo sapien tristique at. Interdum et malesuada fames ac ante ipsum primis in faucibus. </p>
+          </div>
+        </div>
+      </a>
+      <a class="news-link" href="">
+        <div class="media clearfix background-clouds color-black">
+          <div class="pull-left">
+            <img class="media-object" src="/themes/neat/img/img2.jpg" alt="...">
+          </div>
+          <div class="media-body">
+            <h3 class="media-heading">Some news</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin venenatis velit nibh, sit amet commodo sapien tristique at. Interdum et malesuada fames ac ante ipsum primis in faucibus. </p>
+          </div>
+        </div>
+      </a>
+      <a class="news-link" href="">
+        <div class="media clearfix background-clouds color-black">
+          <div class="pull-left">
+            <img class="media-object" src="/themes/neat/img/img3.jpg" alt="...">
+          </div>
+          <div class="media-body">
+            <h3 class="media-heading">News heading</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin venenatis velit nibh, sit amet commodo sapien tristique at. Interdum et malesuada fames ac ante ipsum primis in faucibus. </p>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+</section>
+<!-- News - FINISH -->
+
+<!-- Info thumbnails - START -->
+<section class="">
+  <div class="container">
+    <h1 class="text-center x-large">Information thumbnails</h1>
+    <p class="lead text-center">Information thumbnails are the workhorse of entire template. You can use them to display any type of content and there are many ways for you to play with them: you can change the colours, add and remove elements and change their order, add icons...</p>
+    <div class="row">
+      <div class="col-sm-4 col-md-4">
+        <div class="info-thumbnail-link">
+        <div class="thumbnail info-thumbnail with-icon background-clouds color-text">
+          <img src="/themes/neat/img/img1.jpg" alt="...">
+          <div class="icon">
+            <span class="fa-stack">
+              <i class="fa fa-circle fa-stack-2x color-lead"></i>
+              <i class="fa fa-flag fa-stack-1x color-white"></i>
+            </span>
+          </div>
+          <div class="caption bordered background-white">
+            <h3>Font awesome</h3>
+            <p class="description">NEAT template supports as much modern technologies and trends as possible. One of them is font awesome icons. This great set of fonts is available anywhere you want on your page. Some of NEAT ui elements are also using font awesome like this info thumbnails.</p>
+            <p class="buttons"><a href="#" class="btn btn-lead">Read more</a></p>
+          </div>
+        </div>
+        </div>
+      </div>
+      <div class="col-sm-4 col-md-4">
+        <div class="info-thumbnail-link">
+        <div class="thumbnail info-thumbnail with-icon background-clouds color-text">
+          <img src="/themes/neat/img/img2.jpg" alt="...">
+          <div class="icon">
+            <span class="fa-stack">
+              <i class="fa fa-circle fa-stack-2x color-lead"></i>
+              <i class="fa fa-inbox fa-stack-1x color-white"></i>
+            </span>
+          </div>
+          <div class="caption bordered background-white">
+            <h3>Color classes</h3>
+            <p class="description">You can use template elements as you have them in the examples but if you feel creative you can compose our own color combinations in ui elements. You have beautiful set of flat ui colors to work with just use <i>color-{color-name}</i> or <i>background-{color-name}</i> to change text color or background of any element on the page.</p>
+            <p class="buttons"><a href="#" class="btn btn-lead">Read more</a></p>
+          </div>
+        </div>
+        </div>
+      </div>
+      <div class="col-sm-4 col-md-4">
+        <div class="info-thumbnail-link">
+        <div class="thumbnail info-thumbnail with-icon background-clouds color-text">
+          <img src="/themes/neat/img/img3.jpg" alt="...">
+          <div class="icon">
+            <span class="fa-stack">
+              <i class="fa fa-circle fa-stack-2x color-alizarin"></i>
+              <i class="fa fa-eye fa-stack-1x color-white"></i>
+            </span>
+          </div>
+          <div class="caption bordered background-white">
+            <h3>Some title</h3>
+            <p class="description color-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin venenatis velit nibh, sit amet commodo sapien tristique at. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras bibendum erat at ultricies rhoncus.</p>
+            <p class="buttons"><a href="#" class="btn btn-lead">Read more</a></p>
+          </div>
+        </div>
+      </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Info thumbnails - END -->
