Add about pages, update theme to red

--- a/app/assets/stylesheets/neat-overrides.scss
+++ b/app/assets/stylesheets/neat-overrides.scss
@@ -17,3 +17,13 @@
 .responsive-slider-parallax .slides-container {
   background-image: url(asset-path("eecs-parallax.png"));
 }
+
+.media-date{
+  font-weight: bold;
+  padding-bottom: 10px;
+}
+
+.news a.news-link {
+  color: black;
+}
+  
