--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,10 +6,10 @@
           <div class="container">
             <div class="wrapper">
               <div class="caption header" data-animate="slideAppearRightToLeft" data-delay="0" data-length="300">
-                <h2>EECS</h2>
-                <p class="sub text-left" data-animate="slideAppearLeftToRight" data-delay="300" data-length="300"><span>Clean and modern design</span></p>
-                <p class="sub text-left" data-animate="slideAppearLeftToRight" data-delay="500" data-length="300"><span>Lightweight</span></p>
-                <p class="sub text-left" data-animate="slideAppearLeftToRight" data-delay="700" data-length="300"><span>Standards compliant</span></p>
+                <h2>EECS:</h2>
+                <p class="sub text-left" data-animate="slideAppearLeftToRight" data-delay="300" data-length="300"><span>Building academic excellence</span></p>
+                <p class="sub text-left" data-animate="slideAppearLeftToRight" data-delay="500" data-length="300"><span>through healthy relationships</span></p>
+                <p class="sub text-left" data-animate="slideAppearLeftToRight" data-delay="700" data-length="300"><span>and a child-centered approach.</span></p>
               </div>
             </div>
           </div>
@@ -20,10 +20,9 @@
           <div class="container">
             <div class="wrapper">
               <div class="caption header text-center" data-animate="slideAppearUpToDown" data-delay="0" data-length="300">
-                <h2>Twitter Boostrap</h2>
-                <p class="sub" data-animate="slideAppearDownToUp" data-delay="300" data-length="300"><span>Compatible with version 3</span></p>
-                <p class="sub" data-animate="slideAppearDownToUp" data-delay="500" data-length="300"><span>Perfectly compatible with grid system</span></p>
-                <p class="sub" data-animate="slideAppearDownToUp" data-delay="700" data-length="300"><span>Bootstrap compatible Slider and Calendar plugins</span></p>
+                <h2>The Next Generation of Leaders:</h2>
+                <p class="sub" data-animate="slideAppearDownToUp" data-delay="300" data-length="300"><span>Preparing students for the digital age</span></p>
+                <p class="sub" data-animate="slideAppearDownToUp" data-delay="500" data-length="300"><span>with a strong focus on math and literacy skills</span></p>
               </div>
             </div>
           </div>
@@ -34,9 +33,9 @@
           <div class="container">
             <div class="wrapper">
               <div class="caption header text-right" data-animate="slideAppearDownToUp" data-delay="0" data-length="300">
-                <h2>Html <span style="font-weight: 300"><span class="color-alizarin">c</span><span class="color-carrot">o</span><span class="color-sun-flower">l</span><span class="color-emerald">o</span><span class="color-peter-river">r</span></span> classes</h2>
-                <p class="sub" data-animate="slideAppearUpToDown" data-delay="300" data-length="300"><span>"Flat UI" colors palette</span></p>
-                <p class="sub" data-animate="slideAppearUpToDown" data-delay="500" data-length="300"><span>Made to modify any layout element</span></p>
+                <h2>Diversity: <span style="font-weight: 300"><span class="color-alizarin">c</span><span class="color-carrot">o</span><span class="color-sun-flower">l</span><span class="color-emerald">o</span><span class="color-peter-river">r</span></span></h2>
+                <p class="sub" data-animate="slideAppearUpToDown" data-delay="300" data-length="300"><span>Building a diverse & vibrant community </span></p>
+                <p class="sub" data-animate="slideAppearUpToDown" data-delay="500" data-length="300"><span>through compassionate education.</span></p>
               </div>
             </div>
           </div>
@@ -130,25 +129,15 @@
   <div class="container">
     <h1><span>Upcoming Events</span></h1>
     <div class="news">
-      <a class="news-link" href="">
-        <div class="media clearfix background-clouds color-black">
-          <div class="pull-left">
-            <img class="media-object" src="/themes/neat/img/img1.jpg" alt="...">
-          </div>
-          <div class="media-body">
-            <h3 class="media-heading">Awesome news</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin venenatis velit nibh, sit amet commodo sapien tristique at. Interdum et malesuada fames ac ante ipsum primis in faucibus. </p>
-          </div>
-        </div>
-      </a>
-      <a class="news-link" href="">
+      <a class="news-link" href="http://www.portlandchildrensfilmfestival.com/">
         <div class="media clearfix background-clouds color-black">
           <div class="pull-left">
             <img class="media-object" src="/themes/neat/img/img2.jpg" alt="...">
           </div>
           <div class="media-body">
-            <h3 class="media-heading">Some news</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin venenatis velit nibh, sit amet commodo sapien tristique at. Interdum et malesuada fames ac ante ipsum primis in faucibus. </p>
+            <h3 class="media-heading">Portland Children's Film Festival</h3>
+            <p class="media-date">April 2-6, 2014 at venues throughout Portland, Maine. </p>
+            <p>The PCFF is an idea born from the minds and hearts of East End Community school parents and teachers who believe in the value of using film to build community. The festival is intended to connect Maine children and their families with people in their own cultures and communities, as well as expand the worldviews of all attendees. Visit the Portland Children's Film Festival website for more information on the shows, dates, and venues. </p>
           </div>
         </div>
       </a>
