--- a/app/views/pages/hours.html.erb
+++ b/app/views/pages/hours.html.erb
@@ -18,7 +18,7 @@
       </div>
       <div class="col-md-9">
         <div class="content">
-          <h1><span>About EECS</span></h1>
+          <h1><span>School Hours</span></h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sit amet semper diam, quis commodo eros. Nam mi est, faucibus et varius tempus, tincidunt in dolor. Fusce sodales, lectus vel molestie rhoncus, elit massa aliquam lacus, porta aliquam sem tortor vitae nisl. Pellentesque aliquam condimentum nunc ut sollicitudin. Ut urna nunc, consectetur vitae viverra at, tempus eu tortor. Duis sed interdum nisl. Vivamus ac metus in arcu vestibulum pretium. Fusce ac rutrum lacus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
           <p>Sed porta ac ipsum ut mollis. Integer id vestibulum dui, at dapibus orci. Nunc adipiscing, orci sit amet ultricies sagittis, arcu orci feugiat lorem, nec feugiat magna erat id lectus. Cras tristique eu sapien ut aliquam. Cras pharetra nisl sapien, ut tincidunt nunc feugiat at. Donec massa nisl, tincidunt eu nulla quis, tristique facilisis nibh. Praesent viverra tempor lectus et consectetur.</p>
