--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<div id="nav-wrapper" class="background-white color-black">
+<div id="nav-wrapper" class="background-midnight-blue color-white">
   <nav id="mainMenu" class="navbar navbar-fixed-top" role="navigation">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -16,23 +16,18 @@
       <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li class="<%= 'active' if controller.action_name == 'home' %>"><%= link_to 'Home', root_path %></li>
-          <li class="<%= 'active' if controller.action_name == 'about' %>"><%= link_to 'About us', about_path %></li>
+          <li class="<%= 'active' if request.path =~ /about/ %>"><%= link_to 'About Our School', about_path %></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Parent & Student Resources <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="">Pricing</a></li>
-              <li><a href="">Services</a></li>
-              <li><a href="">FAQ</a></li>
-              <li><a href="">Gallery</a></li>
-              <li class="divider"></li>
-              <li><a href="">Registration</a></li>
-              <li><a href="">Login</a></li>
-              <li><a href="">Register/Login</a></li>
-              <li class="divider"></li>
-              <li><a href="">Error 404</a></li>
-              <li class="divider"></li>
-              <li><a href="">Article</a></li>
-              <li><a href="">Typography</a></li>
+              <li><%= link_to "School Calendar", "http://www2.portlandschools.org/sites/default/files/13-14%20Final.pdf" %></li>
+              <li><%= link_to "Lunch Menus", "http://www2.portlandschools.org/lunch-menus" %></li>
+              <li><%= link_to "Student Handbook", "http://www2.portlandschools.org/sites/default/files/handbooks/Parent%20Handbook.pdf" %></li>
+              <li><%= link_to "PTO", "http://eecs.portlandpto.org/" %></li>
+              <li><%= link_to "Newsletter", "http://www2.portlandschools.org/sites/default/files/School%20Success%20Plan.PDF" %></li>
+              <li><%= link_to "Walking School Bus", "http://portlandwalkingschoolbus.org/" %></li>
+              <li><%= link_to "FASTT Math", "http://teacher.scholastic.com/math-fact-fluency/fastt-math-next-generation/" %></li>
+              <li><%= link_to "First In Math", "http://firstinmath.com/" %></li>
             </ul>
           </li>
           <li class="<%= 'active' if controller.action_name == 'contact' %>"><a href="contact.html">Contact</a></li>
