--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,6 +9,6 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require neat-blue-overrides
- *= require_tree .
+ *= require vendor/neat-red
+ *= require neat-overrides
  */
