content and images for home page

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -22,20 +22,20 @@
         <div class="thumbnail info-thumbnail padding1 background-clouds color-black">
           <div class="caption background-white">
             <h3>Contacts</h3>
-            <p><span class="fa fa-home color-lead"></span> Street 13A, City 12349, GB</p>
-            <p><span class="fa fa-envelope color-lead"></span> contact@company.com</p>
-            <p><span class="fa fa-phone-square color-lead"></span> 1 456-123-567</p>
-            <p><span class="fa fa-globe color-lead"></span> <a href="#">www.company.com</a></p>
+            <p><span class="fa fa-home color-lead"></span> 195 North Street Porland, Maine 04101</p>
+            <p><span class="fa fa-envelope color-lead"></span> gendrm@portlandschools.com</p>
+            <p><span class="fa fa-phone-square color-lead"></span> 1 207-874-8228</p>
+            <p><span class="fa fa-phone-square color-lead"></span> 1 207-874-8234</p>
+            <p><span class="fa fa-globe color-lead"></span> <a href="#">www.eastendcommunityschool.org</a></p>
           </div>
         </div>
       </div>
       <div class="col-sm-6 col-md-6">
         <div class="thumbnail info-thumbnail padding1 background-clouds color-black">
           <div class="caption background-white">
-            <h3>Hours</h3>
-            <p><strong class="color-lead">Monday-Friday:</strong> 9am - 5pm</p>
-            <p><strong class="color-lead">Saturday:</strong> 10am - 14pm</p>
-            <p><strong class="color-lead">Sunday:</strong> Closed</p>
+            <h3>School Hours</h3>
+            <p><strong class="color-lead">Monday, Tuesday, Thursday, Friday:</strong> 8:05am - 3:05pm</p>
+            <p><strong class="color-lead">Wednesday (Early Release):</strong> 8:05am - 2:05pm</p>
           </div>
         </div>
       </div>
