--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -83,9 +83,73 @@
   });
 </script>
 
+<!-- Info thumbnails - START -->
+<section class="">
+  <div class="container">
+    <h1 class="text-center x-large">Education + Community</h1>
+    <p class="lead text-center">At EECS we are focused on helping our students develop the appropriate academic, interpersonal, and creative problem-solving skills they need to thrive in a growing, changing world.</p>
+    <div class="row">
+      <div class="col-sm-4 col-md-4">
+        <div class="info-thumbnail-link">
+        <div class="thumbnail info-thumbnail with-icon background-clouds color-text">
+          <%= image_tag("stem.png") %>
+          <div class="icon">
+            <span class="fa-stack">
+              <i class="fa fa-circle fa-stack-2x color-lead"></i>
+              <i class="fa fa-flag fa-stack-1x color-white"></i>
+            </span>
+          </div>
+          <div class="caption bordered background-white">
+            <h3>STEM</h3>
+            <p class="description">We are using the enVisionMATH program, designed from the ground up to meet Common Core State Standards using interactive and visual learning techniques. At EECS every student has access to iPads, (talk about the programming class in Rise and Shine here?) film stuff/animation, our science classes... </p>
+            <p class="buttons"><a href="#" class="btn btn-lead">Read more</a></p>
+          </div>
+        </div>
+        </div>
+      </div>
+      <div class="col-sm-4 col-md-4">
+        <div class="info-thumbnail-link">
+        <div class="thumbnail info-thumbnail with-icon background-clouds color-text">
+          <%= image_tag("rise.png") %>
+          <div class="icon">
+            <span class="fa-stack">
+              <i class="fa fa-circle fa-stack-2x color-lead"></i>
+              <i class="fa fa-inbox fa-stack-1x color-white"></i>
+            </span>
+          </div>
+          <div class="caption bordered background-white">
+            <h3>Rise & Shine</h3>
+            <p class="description">Our Rise and Shine program helps students kick start their day with a lineup of enriching programs. Students take control of their learning by choosing five activities across four separate...connect to their community, leaders, etc </p>
+            <p class="buttons"><a href="#" class="btn btn-lead">Read more</a></p>
+          </div>
+        </div>
+        </div>
+      </div>
+      <div class="col-sm-4 col-md-4">
+        <div class="info-thumbnail-link">
+        <div class="thumbnail info-thumbnail with-icon background-clouds color-text">
+          <%= image_tag("garden.jpg") %>
+          <div class="icon">
+            <span class="fa-stack">
+              <i class="fa fa-circle fa-stack-2x color-alizarin"></i>
+              <i class="fa fa-eye fa-stack-1x color-white"></i>
+            </span>
+          </div>
+          <div class="caption bordered background-white">
+            <h3>Responsibility</h3>
+            <p class="description">Being good citizens, sustainability, solar power, recycling program, golden bucket, gardens, leadership programs....</p>
+            <p class="buttons"><a href="#" class="btn btn-lead">Read more</a></p>
+          </div>
+        </div>
+      </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Info thumbnails - END -->
 
 <!-- Info thumbnails - START -->
-<section class="background-white color-black">
+<!-- <section class="background-white color-black">
   <div class="container">
     <div class="row">
       <div class="col-sm-4 col-md-4">
@@ -120,7 +184,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 <!-- Info thumbnails - END -->
 
 
@@ -132,7 +196,7 @@
       <a class="news-link" href="http://www.portlandchildrensfilmfestival.com/">
         <div class="media clearfix background-clouds color-black">
           <div class="pull-left">
-            <img class="media-object" src="/themes/neat/img/img2.jpg" alt="...">
+            <%= image_tag("pcff.png", class: "media-object") %>
           </div>
           <div class="media-body">
             <h3 class="media-heading">Portland Children's Film Festival</h3>
@@ -144,11 +208,12 @@
       <a class="news-link" href="">
         <div class="media clearfix background-clouds color-black">
           <div class="pull-left">
-            <img class="media-object" src="/themes/neat/img/img3.jpg" alt="...">
+            <%= image_tag("feast.jpg", class: "media-object") %>
           </div>
           <div class="media-body">
-            <h3 class="media-heading">News heading</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin venenatis velit nibh, sit amet commodo sapien tristique at. Interdum et malesuada fames ac ante ipsum primis in faucibus. </p>
+            <h3 class="media-heading">Family Feast</h3>
+            <p class="media-date">March 5th, 5:30 - 7:00 @ East End Community School. </p>
+            <p>Join us for another family feast night at EECS! Bring your family's favorite dish to share, socialize with other families, and enjoy a multitude of activities. </p>
           </div>
         </div>
       </a>
@@ -157,67 +222,4 @@
 </section>
 <!-- News - FINISH -->
 
-<!-- Info thumbnails - START -->
-<section class="">
-  <div class="container">
-    <h1 class="text-center x-large">Information thumbnails</h1>
-    <p class="lead text-center">Information thumbnails are the workhorse of entire template. You can use them to display any type of content and there are many ways for you to play with them: you can change the colours, add and remove elements and change their order, add icons...</p>
-    <div class="row">
-      <div class="col-sm-4 col-md-4">
-        <div class="info-thumbnail-link">
-        <div class="thumbnail info-thumbnail with-icon background-clouds color-text">
-          <img src="/themes/neat/img/img1.jpg" alt="...">
-          <div class="icon">
-            <span class="fa-stack">
-              <i class="fa fa-circle fa-stack-2x color-lead"></i>
-              <i class="fa fa-flag fa-stack-1x color-white"></i>
-            </span>
-          </div>
-          <div class="caption bordered background-white">
-            <h3>Font awesome</h3>
-            <p class="description">NEAT template supports as much modern technologies and trends as possible. One of them is font awesome icons. This great set of fonts is available anywhere you want on your page. Some of NEAT ui elements are also using font awesome like this info thumbnails.</p>
-            <p class="buttons"><a href="#" class="btn btn-lead">Read more</a></p>
-          </div>
-        </div>
-        </div>
-      </div>
-      <div class="col-sm-4 col-md-4">
-        <div class="info-thumbnail-link">
-        <div class="thumbnail info-thumbnail with-icon background-clouds color-text">
-          <img src="/themes/neat/img/img2.jpg" alt="...">
-          <div class="icon">
-            <span class="fa-stack">
-              <i class="fa fa-circle fa-stack-2x color-lead"></i>
-              <i class="fa fa-inbox fa-stack-1x color-white"></i>
-            </span>
-          </div>
-          <div class="caption bordered background-white">
-            <h3>Color classes</h3>
-            <p class="description">You can use template elements as you have them in the examples but if you feel creative you can compose our own color combinations in ui elements. You have beautiful set of flat ui colors to work with just use <i>color-{color-name}</i> or <i>background-{color-name}</i> to change text color or background of any element on the page.</p>
-            <p class="buttons"><a href="#" class="btn btn-lead">Read more</a></p>
-          </div>
-        </div>
-        </div>
-      </div>
-      <div class="col-sm-4 col-md-4">
-        <div class="info-thumbnail-link">
-        <div class="thumbnail info-thumbnail with-icon background-clouds color-text">
-          <img src="/themes/neat/img/img3.jpg" alt="...">
-          <div class="icon">
-            <span class="fa-stack">
-              <i class="fa fa-circle fa-stack-2x color-alizarin"></i>
-              <i class="fa fa-eye fa-stack-1x color-white"></i>
-            </span>
-          </div>
-          <div class="caption bordered background-white">
-            <h3>Some title</h3>
-            <p class="description color-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin venenatis velit nibh, sit amet commodo sapien tristique at. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras bibendum erat at ultricies rhoncus.</p>
-            <p class="buttons"><a href="#" class="btn btn-lead">Read more</a></p>
-          </div>
-        </div>
-      </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- Info thumbnails - END -->
+
