--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,10 +2,10 @@
   <div class="container">
     <div class="row">
       <div class="col-md-3">
-        <h3>Menu</h3>
+        <h3>Quick links</h3>
         <ul class="nav-footer">
           <li class="active"><%= link_to 'Home', root_path %></li>
-          <li><%= link_to 'Pages', '' %></li>
+          <li><%= link_to 'Staff Directory', about_staff_path %></li>
           <li><%= link_to 'About us', about_path %></li>
           <li><%= link_to 'Contact', contact_path %></li>
         </ul>
@@ -51,15 +51,13 @@
         <hr>
         <div class="row">
           <div class="col-md-6">
-            All rights reserved &copy; 2013 EECS
+            All rights reserved &copy; 2014 EECS
           </div>
           <div class="col-md-6">
             <p class="social">
-              <a href="/"><span class="fa fa-facebook"></span></a>
-              <a href="/"><span class="fa fa-twitter"></span></a>
-              <a href="/"><span class="fa fa-youtube"></span></a>
-              <a href="/"><span class="fa fa-linkedin"></span></a>
-              <a href="/"><span class="fa fa-pinterest"></span></a>
+              <a href="https://www.facebook.com/pages/East-End-Community-School/114915611904389"><span class="fa fa-facebook"></span></a>
+              <a href="http://www.youtube.com/results?search_query=%22east%20end%20community%20school%22&sm=3"><span class="fa fa-youtube"></span></a>
+              <a href="http://www.pinterest.com/search/pins/?q=%22east%20end%20community%20school%22"><span class="fa fa-pinterest"></span></a>
             </p>
           </div>
         </div>
