--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -28,6 +28,7 @@
               <li><%= link_to "Walking School Bus", "http://portlandwalkingschoolbus.org/" %></li>
               <li><%= link_to "FASTT Math", "http://teacher.scholastic.com/math-fact-fluency/fastt-math-next-generation/" %></li>
               <li><%= link_to "First In Math", "http://firstinmath.com/" %></li>
+              <li><%= link_to "Math Team", "http://eastendmath.weebly.com/" %></li>
             </ul>
           </li>
           <li class="<%= 'active' if controller.action_name == 'contact' %>"><a href="contact.html">Contact</a></li>
