--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -128,7 +128,7 @@
       <div class="col-sm-4 col-md-4">
         <div class="info-thumbnail-link">
         <div class="thumbnail info-thumbnail with-icon background-clouds color-text">
-          <%= image_tag("garden.jpg") %>
+          <%= image_tag("garden1.png") %>
           <div class="icon">
             <span class="fa-stack">
               <i class="fa fa-circle fa-stack-2x color-alizarin"></i>
