--- a/app/views/pages/news.html.erb
+++ b/app/views/pages/news.html.erb
@@ -16,17 +16,103 @@
       <div class="col-md-3">
         <%= render 'about_sidebar' %>
       </div>
-      <div class="col-md-9">
-        <div class="content">
-          <h1><span>EECS In The News</span></h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sit amet semper diam, quis commodo eros. Nam mi est, faucibus et varius tempus, tincidunt in dolor. Fusce sodales, lectus vel molestie rhoncus, elit massa aliquam lacus, porta aliquam sem tortor vitae nisl. Pellentesque aliquam condimentum nunc ut sollicitudin. Ut urna nunc, consectetur vitae viverra at, tempus eu tortor. Duis sed interdum nisl. Vivamus ac metus in arcu vestibulum pretium. Fusce ac rutrum lacus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-          <p>Sed porta ac ipsum ut mollis. Integer id vestibulum dui, at dapibus orci. Nunc adipiscing, orci sit amet ultricies sagittis, arcu orci feugiat lorem, nec feugiat magna erat id lectus. Cras tristique eu sapien ut aliquam. Cras pharetra nisl sapien, ut tincidunt nunc feugiat at. Donec massa nisl, tincidunt eu nulla quis, tristique facilisis nibh. Praesent viverra tempor lectus et consectetur.</p>
-
-          <p>Pellentesque imperdiet diam ut augue vulputate eleifend vitae id lorem. Aliquam a congue lectus, nec sollicitudin risus. Vivamus id nisi tincidunt, tempus orci sed, vestibulum eros. Nulla facilisi. Nam eu ornare libero. Suspendisse adipiscing neque et egestas bibendum. Morbi vulputate non tellus eu dapibus. Maecenas tempor scelerisque pulvinar. Donec dictum pulvinar rhoncus. Sed ornare quis orci eget viverra. Sed tincidunt id turpis interdum congue. Nam quis scelerisque lacus. Suspendisse id metus nibh.</p>
-
-          <p>Vivamus rhoncus felis non lorem adipiscing, ac faucibus diam mattis. Vestibulum malesuada, sem vitae placerat consequat, est odio dapibus est, ac rutrum tortor justo eget sapien. Etiam vehicula mattis aliquet. Sed dictum hendrerit blandit. Suspendisse justo lacus, ultricies quis aliquam eu, convallis vel neque. Integer lobortis eu dolor a molestie. Nulla rhoncus justo vel risus dictum adipiscing. Donec ornare dictum augue, sed bibendum enim mattis a. Donec at metus purus. Duis pellentesque feugiat odio sed vehicula. Pellentesque egestas ac nisi id auctor. Cras aliquet, ligula a lobortis tristique, sapien libero ornare libero, et viverra tellus nisi non ligula. Nullam eleifend lacus sem, sit amet rutrum elit congue vitae. Praesent vehicula viverra odio in aliquet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent interdum nisl et magna dignissim tincidunt.</p>
+      <div class="col-sm-8">
+        <div class="col-sm-6 col-md-6">
+          <a class="info-thumbnail-link" href="http://bangordailynews.com/slideshow/the-best-voices-in-the-world-grammy-nominated-african-childrens-choir-visits-portland-school/">
+          <div class="thumbnail info-thumbnail background-clouds color-text">
+            <%= image_tag("afc.png") %>
+            <div class="special background-emerald color-white"><h4>African Children's Choir Visits EECS</h4></div>
+            <div class="caption bordered background-white">
+              <p class="description">"After two performances at Merrill Auditorium, the Grammy Award-nominated African Children’s Choir rode their tour bus to the East End Community School for a pizza party with the resident glee club Monday afternoon. Local students handed out whoopie pies, skipped rope and danced with the globetrotting African choir before they took turns singing at a schoolwide assembly." <br><%= link_to "(Read full article at Bangor Daily News)", "http://bangordailynews.com/slideshow/the-best-voices-in-the-world-grammy-nominated-african-childrens-choir-visits-portland-school/" %></p>
+            </div>
+          </div>
+          </a>
         </div>
+
+        <div class="col-sm-6 col-md-6">
+          <a class="info-thumbnail-link" href="http://bangordailynews.com/slideshow/it-tastes-slightly-of-the-ocean-portland-school-students-test-seaweed-pizza/">
+          <div class="thumbnail info-thumbnail background-clouds color-text">
+            <%= image_tag("seaweed.png") %>
+            <div class="special background-emerald color-white"><h4>East End Community School students taste-test seaweed pizza</h4></div>
+            <div class="caption bordered background-white">
+              <p class="description">"The pizza topping rapidly gaining popularity among Portland’s East End Community School students is seaweed. 'This is the first week I’ve ever put seaweed on anything, but it’s been a wonderful addition,' said Laura Mailander of Cultivating Community, a Maine organization that spearheads garden education initiatives such as the one at the East End school." <br><%= link_to "(Read full article at Bangor Daily News)", "http://bangordailynews.com/slideshow/it-tastes-slightly-of-the-ocean-portland-school-students-test-seaweed-pizza/" %></p>
+            </div>
+          </div>
+          </a>
+        </div>
+
+        <div class="col-sm-6 col-md-6">
+          <a class="info-thumbnail-link" href="http://greeningschoolgrounds.wordpress.com/site-based-liaison-program/east-end-community-school/">
+          <div class="thumbnail info-thumbnail background-clouds color-text">
+            <%= image_tag("teaching-garden.png") %>
+            <div class="special background-emerald color-white"><h4>Bug, Bird and Butterfly Teaching Garden</h4></div>
+            <div class="caption bordered background-white">
+              <p class="description">"The court yard space that we redesigned and planted as a Bird, Bug, and Butterfly Teaching Garden already looks completely transformed, so I can’t wait to see it in a few months as it grows and gets some finishing touches.The classes involved in the planting of the Garden learned about." <br><%= link_to "(Read full article @ Greening School Grounds)", "http://greeningschoolgrounds.wordpress.com/site-based-liaison-program/east-end-community-school/" %></p>
+            </div>
+          </div>
+          </a>
+        </div>
+
+        <div class="col-sm-6 col-md-6">
+          <a class="info-thumbnail-link" href="http://www.pressherald.com/news/at-east-end-school-improvement-a-matter-of-principal_2012-11-26.html?pagenum=full">
+          <div class="thumbnail info-thumbnail background-clouds color-text">
+            <%= image_tag("marcia-child.png") %>
+            <div class="special background-emerald color-white"><h4>At East End school, improvement a matter of principal</h4></div>
+            <div class="caption bordered background-white">
+              <p class="description">"Marcia Gendron greets her students at the front doors of East End Community School on Munjoy Hill. She calls each child by name and doles out hugs to a few who stop to chat. Other teachers also greet the children, who are excited to be here." <br><%= link_to "(Read full article @ Portland Press Herald)", "http://www.pressherald.com/news/at-east-end-school-improvement-a-matter-of-principal_2012-11-26.html?pagenum=full" %></p>
+            </div>
+          </div>
+          </a>
+        </div>
+
+        <div class="col-sm-6 col-md-6">
+          <a class="info-thumbnail-link" href="http://maineinsights.com/perma/winterkids-partners-with-portland-nordic-to-teach-10-kids-to-cross-country-ski">
+          <div class="thumbnail info-thumbnail background-clouds color-text">
+            <%= image_tag("ski.png") %>
+            <div class="special background-emerald color-white"><h4>WinterKids partners with Portland Nordic – to teach 10 kids to cross-country ski</h4></div>
+            <div class="caption bordered background-white">
+              <p class="description">"Thanks to a generous anonymous donation, WinterKids has arranged for ten students from the East End Community School to learn to cross-country ski at Riverside this winter. The organization’s partnership with Portland Nordic, Portland Recreation, and Maine Winter Sports Healthy Hometowns is providing the students with equipment and resources so they can get outside and active this winter, which is one of WinterKids’ key goals." <br><%= link_to "(Read full article @ Maine Insights)", "http://maineinsights.com/perma/winterkids-partners-with-portland-nordic-to-teach-10-kids-to-cross-country-ski" %></p>
+            </div>
+          </div>
+          </a>
+        </div>
+
+        <div class="col-sm-6 col-md-6">
+          <a class="info-thumbnail-link" href="http://mainedoenews.net/2013/04/03/portland-schools-establish-promising-practices-for-all-students/">
+          <div class="thumbnail info-thumbnail background-clouds color-text">
+            <%= image_tag("promising.png") %>
+            <div class="special background-emerald color-white"><h4>Portland schools establish promising practices for all students</h4></div>
+            <div class="caption bordered background-white">
+              <p class="description">"East End has used its federal grant to fund STEM coaches, design a new assessment system for math, and implement flexible grouping in certain subjects. And no progress would have been made without East End’s all-star teachers, who surrender lunch hours for grade-level meetings and devote two hours to professional development every single week." <br><%= link_to "(Read full article @ Maine DOE Newsroom)", "http://mainedoenews.net/2013/04/03/portland-schools-establish-promising-practices-for-all-students/" %></p>
+            </div>
+          </div>
+          </a>
+        </div>
+
+        <div class="col-sm-6 col-md-6">
+          <a class="info-thumbnail-link" href="http://www.maineyogafest.com/2/category/sponsor%20qacd1432f2ff/1.html">
+          <div class="thumbnail info-thumbnail background-clouds color-text">
+            <%= image_tag("yogafest.png") %>
+            <div class="special background-emerald color-white"><h4>Maine Yoga Festival To Be Hosted at EECS</h4></div>
+            <div class="caption bordered background-white">
+              <p class="description">"We chose to hold the festival at the East End Community School which is a green building and is a case study for the city of Portland in their sustainable city project.  The building is built to be environmentally sustainable, use water more efficiently and improve the quality of waste water.  " <br><%= link_to "(Read full article @ Maine Yoga Fest)", "http://www.maineyogafest.com/2/category/sponsor%20qacd1432f2ff/1.html" %></p>
+            </div>
+          </div>
+          </a>
+        </div>
+
+        <div class="col-sm-6 col-md-6">
+          <a class="info-thumbnail-link" href="http://www.cascobay.usm.maine.edu/pdfs/East%20End%20School%20Green%20Roof%20Press%20Release.pdf">
+          <div class="thumbnail info-thumbnail background-clouds color-text">
+            <%= image_tag("roof.png") %>
+            <div class="special background-emerald color-white"><h4>Plant, mow and water the ... roof?</h4></div>
+            <div class="caption bordered background-white">
+              <p class="description">"Maine rooftops are starting to sprout grass, trees and other plants, and nobody's complaining about poor maintenance. The new elementary school has what may be the state's first 'green roof', a covering of soil and low-growing plants on a first floor roof section just outside the second-floor window of the teacher's room." <br><%= link_to "(Read full article @ Portland Press Herald)", "http://www.cascobay.usm.maine.edu/pdfs/East%20End%20School%20Green%20Roof%20Press%20Release.pdf" %></p>
+            </div>
+          </div>
+          </a>
+        </div>
+
       </div>
     </div>
   </div>
