fix news images

--- a/app/views/pages/news.html.erb
+++ b/app/views/pages/news.html.erb
@@ -71,7 +71,7 @@
             <%= image_tag("ski.png") %>
             <div class="special background-emerald color-white"><h4>WinterKids partners with Portland Nordic – to teach 10 kids to cross-country ski</h4></div>
             <div class="caption bordered background-white">
-              <p class="description">"Thanks to a generous anonymous donation, WinterKids has arranged for ten students from the East End Community School to learn to cross-country ski at Riverside this winter. The organization’s partnership with Portland Nordic, Portland Recreation, and Maine Winter Sports Healthy Hometowns is providing the students with equipment and resources so they can get outside and active this winter, which is one of WinterKids’ key goals." <br><%= link_to "(Read full article @ Maine Insights)", "http://maineinsights.com/perma/winterkids-partners-with-portland-nordic-to-teach-10-kids-to-cross-country-ski" %></p>
+              <p class="description">"Thanks to a generous anonymous donation, WinterKids has arranged for ten students from the East End Community School to learn to cross-country ski at Riverside this winter." <br><%= link_to "(Read full article @ Maine Insights)", "http://maineinsights.com/perma/winterkids-partners-with-portland-nordic-to-teach-10-kids-to-cross-country-ski" %></p>
             </div>
           </div>
           </a>
