--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -31,7 +31,8 @@
               <li><%= link_to "Math Team", "http://eastendmath.weebly.com/" %></li>
             </ul>
           </li>
-          <li class="<%= 'active' if controller.action_name == 'contact' %>"><a href="contact.html">Contact</a></li>
+
+          <li class="<%= 'active' if controller.action_name == 'contact' %>"><%= link_to 'Contact', contact_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="fa fa-search"></span></a>
             <ul class="dropdown-menu">
