--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -96,7 +96,7 @@
           <div class="icon">
             <span class="fa-stack">
               <i class="fa fa-circle fa-stack-2x color-lead"></i>
-              <i class="fa fa-flag fa-stack-1x color-white"></i>
+              <i class="fa fa-compass fa-stack-1x color-white"></i>
             </span>
           </div>
           <div class="caption bordered background-white">
@@ -114,7 +114,7 @@
           <div class="icon">
             <span class="fa-stack">
               <i class="fa fa-circle fa-stack-2x color-lead"></i>
-              <i class="fa fa-inbox fa-stack-1x color-white"></i>
+              <i class="fa fa-star fa-stack-1x color-white"></i>
             </span>
           </div>
           <div class="caption bordered background-white">
@@ -136,7 +136,7 @@
             </span>
           </div>
           <div class="caption bordered background-white">
-            <h3>Responsibility</h3>
+            <h3>Good Citizenship</h3>
             <p class="description">Being good citizens, sustainability, solar power, recycling program, golden bucket, gardens, leadership programs....</p>
             <p class="buttons"><a href="#" class="btn btn-lead">Read more</a></p>
           </div>
